--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -53,7 +53,7 @@
                     >
                   <a href="/">Startsida</a>
                 </li>
-                <li {% if nav == "about" %}
+                <li {% if nav == "info" %}
                     class="active"
                     {% endif %}
                    >
@@ -78,7 +78,7 @@
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Lägg till video</a></li>
+                    <li><a href="/show_interests">Intresseanmälningar</a></li>
                     <li><a href="/users">Användare</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Ändra</li>
