--- a/templates/prices.html
+++ b/templates/prices.html
@@ -1,6 +1,7 @@
 {% set nav = "prices" %}
 {% extends "body_wrapper.html" %}
 {% block body %}
+{% set fields = args['page']['fields'] %}
 <div class="container">
   <div class="row">
   </div>
@@ -8,26 +9,26 @@
   </div>
   <div class="row featurette">
     <div class="col-md-7">
-      <h2>Priser</h2>
-      <h3>Undervisning i Villa Holm</h3>
+      <h2>{{fields['header']['value']}}</h2>
+      <h3{{fields['content']['first_sub_section']['header']['value']}}</h3>
       <p class="lead">
         <ul>
           <li>
-            Prova på erbjudande! 3h - 1 000kr
+	    {{fields['content']['first_sub_section']['bullets']['first_bullet']['text']['value']}}
           </li>
           <li>
-            Undervisning för en person - 450kr/h
+            {{fields['content']['first_sub_section']['bullets']['second_bullet']['text']['value']}}
           </li>
         </ul>
       </p>
-      <h3>Undervisning hemma hos elev</h3>
+      <h3>{{fields['content']['second_sub_section']['header']['value']}}</h3>
       <p class="lead">
         <ul>
           <li>
-            Undervisning för en person - 650kr/h
+	    {{fields['content']['second_sub_section']['bullets']['first_bullet']['text']['value']}}
             <ul>
               <li>
-                Efter godkänt RUT - 375kr/h
+		{{fields['content']['second_sub_section']['bullets']['first_bullet']['sub_bullet_1']['text']['value']}}
                 </li>
             </ul>
           </li>
@@ -44,7 +45,7 @@
       <div class="row">
       </div>
       
-        <img class="featurette-image img-responsive" src="static/img/calculator.png">
+        <img class="featurette-image img-responsive" src="/static/img/calculator.png">
       
       <!--<img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">-->
     </div>
