Users can now be added

--- a/templates/users.html
+++ b/templates/users.html
@@ -6,6 +6,9 @@
   <div class="row" style="height:100px;">
   </div>
   <div class="row featurette">
+    <button class="btn btn-primary add_user_click pull-right">
+      Lägg till användare
+    </button>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -43,5 +46,5 @@
     </table>
   </div>
 </div>
-<script src="/static/js/settings.js"></script>
+<script src="/static/js/users.js"></script>
 {% endblock %}
