changed text on contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,8 +21,8 @@
       <br><b>tel:</b> {{fields['info']['phone']['value']}}      
       
       <div style="margin-top:40px">
-	Bankgiro: {{fields['info']['bankgiro']['value']}}<br>
-	Org.nr: {{fields['info']['org_nr']['value']}}<br>
+	Betalning: {{fields['info']['bankgiro']['value']}}<br>
+	Företaget: {{fields['info']['org_nr']['value']}}<br>
 	Innehar F-skattebevis
       </div>
     </div>
