--- a/templates/change_text.html
+++ b/templates/change_text.html
@@ -8,7 +8,7 @@
     <div class="input-group">
       {% if type == "text" %}
       <textarea id="input_{{parent_field}}{{key}}" class="form-control" rows="4" name="{{key}}" style="width:500px;">{{value["value"]}}</textarea>
-      {% elif type in ["small-text", "image"] %}
+      {% elif type in ["small-text", "image", "link"] %}
       <input id="input_{{parent_field}}{{key}}" class="form-control" type="text" name="{{key}}" style="width:200px;" value='{{value["value"]}}' />
       {% endif %}
       <button class="btn btn-primary edit_btn" style="position:absolute;bottom:0;display:none;" 
