--- a/templates/rut_info.html
+++ b/templates/rut_info.html
@@ -7,8 +7,8 @@
   </div>
   <div class="row featurette">
     <div class="col-md-7">
-      <h2>RUT</h2>
-      Från den 1 januari 2013 har förälder eller annan vårdnadshavare, som har underhållsskyldighet för sitt barn, rätt till skattereduktion för arbetskostnad för hjälp med läxor och annat skolarbete för barn som är elev i grundskola och gymnasieskola förutsatt att arbetet utförts i barnets bostad. Kommunal vuxenutbildning omfattas inte av reglerna om skattereduktion för hjälp med läxläsning och annat skolarbete.
+      <h2>{{args['page']['fields']['header']['value']}}</h2>
+      {{args['page']['fields']['text']['value']}}
     </div>
     <div class="col-md-5">
       <div class="row">
