Added support for changing the content on RUT aswell

--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -86,6 +86,7 @@
                     <li><a href="/edit_text?page=info">Info</a></li>
                     <li><a href="/edit_text?page=priser">Priser</a></li>
                     <li><a href="/edit_text?page=kontakt">Kontakt</a></li>
+		    <li><a href="/edit_text?page=rut_info">RUT</a></li>
                   </ul>
                 </li>
                 {% endif  %}
