--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -39,57 +39,13 @@
   <h2>Profil</h2>
   <div>
     {{add_fields(profile)}}
+
+    <button id="change_password" class="btn btn-primary" style="margin-top:20px">
+      Byt lösenord
+    </button>
+
   </div>
   
 </div>
-<script>
-$(document).ready( function() {
-    $(".setting_field").each( function() {
-        var field = $(this);
-        var lbl = $("#lbl_field", field); 
-        var input = $("#txt_field", field); 
-        $("#btn_edit",this).click( function() {
-            if(lbl.is(":visible")) {
-                lbl.hide();
-                input.show();
-                input.focus();
-                $("img",this).attr("src",
-                                   "/static/img/glyphicons_206_ok_2.png");
-            }
-            else {
-                var button_pressed = $(this);
-                button_pressed.prop("disabled", true);
-                var email = '{{profile["email"]}}';
-                var field_name = $("#field_name", field).html();
-                var value = input.val();
-                if($.trim(lbl.text()) != value) {
-                   alert(lbl.text() + "  " + value);
-                   $.get("/edit_profile?email=" + email
-                         +"&field=" + field_name + "&value=" + value,
-                         function(data) {
-                             var value = input.val();
-                             input.hide();
-                             lbl.show();
-                             lbl.text(value);
-                             $("img", button_pressed).attr("src",
-                                                "/static/img/glyphicons_030_pencil.png");
-                             button_pressed.prop("disabled", false);
-                      });
-                }
-                else {
-                   var value = input.val();
-                   input.hide();
-                   lbl.show();
-                   lbl.text(value);
-                   $("img", button_pressed).attr("src",
-                                                "/static/img/glyphicons_030_pencil.png");
-                   button_pressed.prop("disabled", false);
-                 
-                }
-            }
-        });
-    });
-});
-</script>
-<!--<script src="/static/js/settings.js"></script>--->
+<script src="/static/js/edit_profile.js"></script>
 {% endblock %}
