broken just to get some changes up

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
       <p>
 	{{marketing_box['text']['value']}}
       </p>
-      <p><a class="btn btn-default" href="#" role="button">{{marketing_box['button']['value']}} »</a></p>
+      <!--<p><a class="btn btn-default" href="#" role="button">{{marketing_box['button']['value']}} »</a></p>-->
     </div>
 {% endmacro -%}
 {% set nav = "home" %}
