--- a/templates/rut_info.html
+++ b/templates/rut_info.html
@@ -8,7 +8,7 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2>{{args['page']['fields']['header']['value']}}</h2>
-      {{args['page']['fields']['text']['value']}}
+      {{args['page']['fields']['text']['value']|safe}}
     </div>
     <div class="col-md-5">
       <div class="row">
